Rename string extensions file to make more sense.  Finish up a couple more states, add check to account name state.  Add stat engine.
git-svn-id: https://www.versionshelf.com/svn/gravinity/kittymud/trunk@14 1e6ac0c8-a239-11de-babb-4f77af3ef4be

--- a/KittyMUD/sys.conf
+++ b/KittyMUD/sys.conf
@@ -1,3 +1,6 @@
 Version=`G0.2`x;
 Name=`MK`m`ci`Ct`wt`Cy`cM`mU`MD $(version);
 SaveDir=$(BundleDir)/saves;
+ConfigDir=$(BundleDir)/config;
+UsedCharacterFile=$(ConfigDir)/usedcharacters;
+DataDir=$(BundleDir)/data;
