Add choose character state to test requirements on the account menu.  Fix colors in the engine name, fix MessageSendBase to actually apply the proper end whitespace, and fixed KMAccountMenu to send the proper markup to SendMessageBase (typo in previous reference).  Fix KittyMudStringExtensions so we we add the prompt engine it won't blow up.  Changed the loading routine to show the greeting if its present, and added the greeting to the new connection if its there.  Also fixed the markup in greeting.xml
git-svn-id: https://www.versionshelf.com/svn/gravinity/kittymud/trunk@15 1e6ac0c8-a239-11de-babb-4f77af3ef4be

--- a/KittyMUD/sys.conf
+++ b/KittyMUD/sys.conf
@@ -1,5 +1,5 @@
 Version=`G0.2`x;
-Name=`MK`m`ci`Ct`wt`Cy`cM`mU`MD $(version);
+Name=`mK`ci`Ct`wty`CM`cU`mD $(version);
 SaveDir=$(BundleDir)/saves;
 ConfigDir=$(BundleDir)/config;
 UsedCharacterFile=$(ConfigDir)/usedcharacters;
