Huge commit.  Movement is possible.  Soft reboot is completely ready with the saving and loading procedures now in place.  Next step is adding items and basic npcs and communication channels.
git-svn-id: https://www.versionshelf.com/svn/gravinity/kittymud/trunk@17 1e6ac0c8-a239-11de-babb-4f77af3ef4be

--- a/KittyMUD/sys.conf
+++ b/KittyMUD/sys.conf
@@ -1,6 +1,10 @@
-Version=`G0.2`x;
+Version=`G0.3`x;
 Name=`mK`ci`Ct`wty`CM`cU`mD $(version);
 SaveDir=$(BundleDir)/saves;
 ConfigDir=$(BundleDir)/config;
 UsedCharacterFile=$(ConfigDir)/usedcharacters;
 DataDir=$(BundleDir)/data;
+DataBase=$(DataDir)/templates;
+KMRaceSourceDir=$(DataBase)/races;
+KMJobSourceDir=$(DataBase)/jobs;
+KMRoomSourceDir=$(DataBase)/world;
