Major overhaul of data system, item enhancement stuff, flex and bison files for equation handler.
git-svn-id: https://www.versionshelf.com/svn/gravinity/kittymud/trunk@20 1e6ac0c8-a239-11de-babb-4f77af3ef4be

--- a/KittyMUD/sys.conf
+++ b/KittyMUD/sys.conf
@@ -4,7 +4,8 @@ SaveDir=$(BundleDir)/saves;
 ConfigDir=$(BundleDir)/config;
 UsedCharacterFile=$(ConfigDir)/usedcharacters;
 DataDir=$(BundleDir)/data;
-DataBase=$(DataDir)/templates;
+DataBase=$(DataDir);
 KMRaceSourceDir=$(DataBase)/races;
 KMJobSourceDir=$(DataBase)/jobs;
 KMRoomSourceDir=$(DataBase)/world;
+KMItemBaseDir=$(DataBase)/items;
