Add informal protocols to resolve warnings in XDF.  Fix a memory leak with the socket handling.  Workflows work 100% now.
git-svn-id: https://www.versionshelf.com/svn/gravinity/kittymud/trunk@31 1e6ac0c8-a239-11de-babb-4f77af3ef4be

--- a/KittyMUD/sys.conf
+++ b/KittyMUD/sys.conf
@@ -9,3 +9,4 @@ KMRaceSourceDir=$(DataBase)/races;
 KMJobSourceDir=$(DataBase)/jobs;
 KMRoomSourceDir=$(DataBase)/world;
 KMItemBaseDir=$(DataBase)/items;
+ExeName=EternityChronicles;
